add executable and add parse-db-url npm package

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "database-url-parser-cli",
   "version": "0.0.1",
   "description": "A simple cli tool for quickly parsing database urls and displaying them in the terminal",
-  "main": "index.js",
+  "main": "echo \"Error: no index specified\" && exit 1",
+  "bin": {
+    "parse-database-url": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Don Juan Javier",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "parse-database-url": "^0.3.0"
+  }
 }
